--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme"
         android:name="com.axelia.openweathermapprototype.OpenWeatherMapApp">
         <activity android:name="com.axelia.openweathermapprototype.ui.main.MainActivity"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,13 +25,8 @@
         </activity>
 
         <activity
-            android:name="com.axelia.openweathermapprototype.ui.details.ItemDetailsActivity"
+            android:name="com.axelia.openweathermapprototype.ui.navconcept.NavConceptActivity"
             android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
         </activity>
     </application>
 
